fix spacing issue with home address

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -62,7 +62,6 @@ $blue: #3d7dca;
           .data-list {
             margin: 0 auto;
             padding: 0.5rem;
-            width: 250px;
 
           h3 {
             padding: 0.1rem;
@@ -73,7 +72,7 @@ $blue: #3d7dca;
           .separation {
             margin: 1.5rem auto 0 0;
             height: 5px;
-            width: 250px;
+            width: 260px;
             background-color: white;
             border-radius: 8px;
           }
